# bnbPrices

./: .cache.sqlite  .gitignore  README.md  cities.json  cities.txt  citiesOnWater.md.md  config.json  disabledCities.json  ffrr.json  frhfrhuf.py  othercities.txt.md  pyproject.toml
src/: main.py  utils.py
