[project]
name = "bnbPrices"
version = "0.1.0"
description = ""
authors = [
    {name = "Dist Bit", email = "adp01@pm.me"},
]
dependencies = [
    "python-dotenv",
    "loguru",
    "PySnooper",
    "requests",
    "tabulate>=0.9.0",
    "openmeteo-requests>=1.3.0",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "geopy>=2.4.1",
    "pandas>=2.2.3",
]
requires-python = ">=3.12"
license = {text = "UNLICENCE"}
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
